--- a/setup.cfg
+++ b/setup.cfg
@@ -16,3 +16,9 @@ line_length=88
 [tool:pytest]
 env_files =
     .env
+
+[mypy-pymongo.*]
+ignore_missing_imports = True
+
+[mypy-bson]
+ignore_missing_imports = True
