--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,10 @@
 services: mongodb
 
 language: python
-sudo: required # https://github.com/travis-ci/travis-ci/issues/9815#issuecomment-401756442
-dist: xenial
-matrix:
-  include:
-  - python: 3.6
-  - python: 3.7
-  - python: 3.8-dev
-  allow_failures:
-    - python: 3.8-dev
+python:
+  - "3.6"
+  - "3.7"
+  - "3.8"
 
 install: make init
 script: make travis
