--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ mypy = "*"
 
 [packages]
 pymongo-migrate = {editable = true,path = "."}
+dataclasses = "*"
 
 [requires]
-python_version = "3.6"
+python_version = "3.7"
