fix linter config

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,7 @@ ignore = E203, E266, E501, W503
 max-line-length = 80
 max-complexity = 18
 select = B,C,E,F,W,T4,B9
+exclude = .git,__pycache__,.venv,build,dist
 
 [isort]
 known_first_party = pymongo_migrate
@@ -16,8 +17,5 @@ line_length=88
 env_files =
     .env
 
-[mypy-pymongo.*]
-ignore_missing_imports = True
-
-[mypy-bson]
+[mypy]
 ignore_missing_imports = True
